--- a/Laboratorio 3.ipynb
+++ b/Laboratorio 3.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"img/usmlogo.png\" style=\"float:right;height:100px\">\n",
+    "#### <img src=\"img/usmlogo.png\" style=\"float:right;height:100px\">\n",
     "<img src=\"img/dilogo.png\" style=\"float:left;height:100px\">\n",
     "<center>\n",
     "    <h1> Laboratorio 3 Estadística Computacional </h1>\n",
@@ -229,6 +229,15 @@
     "+ Defina bien las secciones de su notebook [Tips para usar Markdown](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet)\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
