--- a/Pellizzari_Vega_Lab3.ipynb
+++ b/Pellizzari_Vega_Lab3.ipynb
@@ -15,12 +15,30 @@
     "<div>\n",
     "    <center>\n",
     "    <br>\n",
-    "    <h5> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Giorgio Pellizzari - 201473599-5 - Malla Nueva</h5>\n",
+    "    <h5> Giorgio Pellizzari - 201473599-5 - Malla Nueva</h5>\n",
     "    <h5> Felipe Vega - 201473511-1 - Malla Nueva</h5>\n",
     "    <h6>9 de abril del 2018</h6>\n",
     "    </center>\n",
     "</div>\n",
     "</center>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import scipy as sci\n",
+    "from scipy import stats\n",
+    "import statsmodels.api as sm\n",
+    "#import warnings\n",
+    "#warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -80,12 +98,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYIAAAEKCAYAAAAfGVI8AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHiBJREFUeJzt3X20XXV95/H35yZAuERJDKlDIkkoMtiEUZRbC3R00GRa\nik+jjloaBA1tzL2tRFuXOitdPmcp6nQqWokRMEBOGanYjqJFFBUYHxjDg0BAXSBJeLKEYAAJlZB8\n54+9Dznc3HPOPvvsfR4/r7Xuuufss+/e333vPft7fs+KCMzMbHiNdDsAMzPrLicCM7Mh50RgZjbk\nnAjMzIacE4GZ2ZBzIjAzG3JOBGZmQ86JwMxsyDkRmJkNuellHVjShcCrgQcj4th026eA1wBPAncB\nb4+Inc2Oddhhh8WiRYvKCtXMbCDdcMMND0XE3Gb7qawpJiS9HPgNcHFNIvgj4LsR8ZSkcwAi4n3N\njjU2NhabNm0qJU4zs0El6YaIGGu2X2lVQxFxLfDwpG1XRcRT6dMfA88r6/xmZpZNN9sIVgD/2sXz\nm5kZXUoEktYATwGVBvuslLRJ0qbt27d3LjgzsyHT8UQg6W0kjcjLo0EDRUSsj4ixiBibO7dpW4eZ\nmeVUWq+hqUg6BXgv8F8iYlcnz21mZlMrrUQg6VLgR8Axku6VdBbwOeBZwLcl3SxpXVnnNzMbZJUK\nLFoEIyPJ90rdivbmSisRRMRpU2y+oKzzmZkNi0oFVq6EXWm9ytatyXOA5ctbP55HFpuZ9Zk1a/Yl\ngapdu5LteTgRmJn1mW3bWtvejBOBmVmXtVrfv2BBa9ubcSIwM+uian3/1q0Qsa++v1EyWLsWRkef\nuW10NNmehxOBmVnJGn3iz1Pfv3w5rF8PCxeClHxfvz5fQzGUOOlckTzpnJn1q8k9fCD59F69cY+M\nJCWBySTYu7e9c3d90jkzM2v+ib/o+v48nAjMzErUrIdP0fX9eTgRmJkVZKq2gGaf+Iuu78/DicDM\nLIfJN/2Jial7/5x6avNP/MuXw5YtSZvAli2dTQLgRGBmlkntjf+ww2DFimfe9Netm7ot4Jvf7P4n\n/mbca8jMrI5KJWnU3bo1uYnnuV0W0fsnr6y9hjo6DbWZWS+q3vC3bYPnPCfZtmPHM2/+eT8zd7L3\nT15OBGY28Go/2U+bBnv27Ps++ZP+jh37Hrd68598rE73/snLbQRmNrAqlaQ+//TTkyQAyc2/9ntR\nteOjo7BqVW+3BdTjEoGZDZRKBVavfuYn+zIccAA8+9nw8MNJ9c/atf1x05+KE4GZDYROJIBq1c/C\nhf1945/MicDM+t7ERNJ9s4xOkIN686/lNgIz6zvVun8p+TrvvOKSwCGHwJw5++r5L7kkOXY3Bnp1\niksEZtbTiq7yGRlJ+vVP7j00yJ/4m3EiMLOeVKnAO94Bjz9ezPHmzIHPfGY4b/TNOBGYWc8oo67f\nCaA5JwIz6wnLlsHVVxdzLCnp0//5zxdzvEHnxmIz67qJieKSwJw5SQOvk0B2LhGYWdcU2Q7gKqD8\nXCIws46q7fp5+un5ksBIeudauBA2bkzaFB56yEkgL5cIzKxURXX/nDkzaUj2zb54TgRmVoqJiWSg\nV7tc5VM+JwIzK0yRdf7j427w7RQnAjPLrehBX1VOAp3lxmIza9nERHuNvY04CXSeSwRm1pL58+H+\n+4s/rtsCusclAjNrqloCkIpNAnPmuPtnL3CJwMz2U1SPn8n8qb83ORGY2dMqFXjrW4ud9M3z/vQ+\nJwKzIVepwIoV8OSTxR3TN//+4kRgNsQqlaTnTxE88rd/ORGYDamipn2eNw/uu6/941j3lNZrSNKF\nkh6UdFvNtjdJ2ixpr6Sxss5tZlOrVGD69KTqpogkMD7uJDAIyuw+ugE4ZdK224A3ANeWeF4zm6R2\nANiePe0da+bMfV0+3QYwGEqrGoqIayUtmrTtDgBJZZ3WzGoUUf0zfTps2OC6/0HWs20EklYCKwEW\nLFjQ5WjM+s/s2bBzZ/6fnzEDzj/fCWAY9OzI4ohYHxFjETE2d+7cbodj1jeq1UB5k8C8eUm1zxNP\nOAkMi54tEZhZdkuWwO23t3+cpUvhO99p/zjWX5wIzPqYE4AVoczuo5cCPwKOkXSvpLMkvV7SvcCJ\nwDckfaus85sNqtoJ4NpNAuPjSTWQk8BwK7PX0Gl1Xvrnss5pNsiKGgXsXkA2mauGzPpAUVVAGzc6\nAdj+erbXkJntqwZqNwlITgJWn0sEZj2oqBIAeOlHa86JwKyHFJEAFi+GzZuLiceGgxOBWQ8oIgF4\nFlDLy20EZl1QqcDISDHdQJcuTbqAOglYXi4RmHVYUesBz5oFv/51+8cxc4nArEOqPYCKSALj404C\nVhyXCMw6YHQ0mcStXZ4KwsrgEoFZiWbPTkoB7SSB6hgATwVhZWmaCCQdJemg9PHJks6WNKv80Mz6\n15Il7U0FDfsSwN69Hghm5cpSIrgc2CPp+cB64AjgH0uNyqxPVRNAO72AnACs07K0EeyNiKckvR74\nbER8VtJNZQdm1k+K6AkUUUwsZq3Kkgh2SzoNOBN4TbrtgPJCMusfRawJ7IFg1m1ZqobeTrJ+wNqI\nuFvSkcAl5YZl1tuqXUHbSQLVJSGdBKzbmiaCiLgdeB9wY/r87og4p+zAzHpN7YIw7VQDVdsAnACs\nVzStGpL0GuDTwIHAkZKOAz4SEa8tOzizXlDUgjAjI7BnT/vHMStalqqhDwEvBXYCRMTNwO+WGJNZ\nzxgdLSYJjI87CVjvytRYHBGPSKrdtrekeMx6xjP/5fPxWgDWD7Ikgs2S/gyYJulo4Gzgh+WGZdZd\n7SYB9wSyfpKlauidwBLgt8ClwKPAu8oMyqyb2kkCixe7J5D1n6YlgojYBaxJv8wGVjsTw7kEYP2s\nbiKQ9HWg7lhH9xqyQXHggbB7d+s/5/UAbFA0KhF8umNRmHVJnmqggw+GXbuKj8WsW+omgoi4ppOB\nmHVS3rmB3AvIBlGjqqHLIuLNkm5liiqiiHhhqZGZlWTatGRmz1Y5CdigalQ1tDr9/upOBGJWpnZn\nB9240VNC2+BqVDX0QPpwIiLeV/uapHNI5h8y62ntTg9xwAHw5JPFxWPWi7KMI/ivU2z7k6IDMStS\ndYK4vEmgOjGck4ANg0ZtBOPABPC7km6peelZwA/KDswsr7zdQau8QIwNm0ZtBP8I/CvwceD9Ndsf\ni4iHS43KLIclS9pbIhKcBGw4NWojeAR4BDhN0jTguen+MyXNjIhtHYrRrKl2SwEeG2DDrGkbgaS/\nAv4N+DbwjfTripLjMsts2rT8SaDaFuAkYMMsy+yj7wKOiYgdZQdj1orZs2Hnznw/6+khzPbJ0mvo\nHpIqIrOeUKkkn+TzJIFZs5J2ACcBs32ylAh+CXxf0jdIpqIGICL+rrSozOrI2xbg8QBm9WUpEWwj\naR84kKTraPXLrGOqpYA8SWB83EnArJEs6xF8uBOBmNWTt1uoewKZZdM0EUiaC7yXZJWyGdXtEfHK\nJj93Ick8RQ9GxLHptucAXwYWAVuAN0eEa2ttSu2MC3BjsFl2WaqGKsDPgCOBD5PcwH+S4ec2AKdM\n2vZ+4OqIOBq4mmcOVDMD9lUD5U0CS5c6CZi1IksimBMRFwC7I+KaiFgBNCwNAETEtcDkEcivAy5K\nH18E/LdWgrXBN39+/vmBxseTHkHf+U6xMZkNuiy9hqrNcw9IehVwP/CcnOd7bs2spr8iGa08JUkr\ngZUACxYsyHk66xftjAlwjyCz9mQpEXxM0qHA3wDvAc4H3t3uiSMiaLwm8vqIGIuIsblz57Z7OutR\ny5blHxMAniHUrAhZeg1Vp5N4BHhFm+f7N0mHR8QDkg4HHmzzeNan2l0nADxBnFlRsvQa+hJTL1W5\nIsf5vgacCXwi/f5/chzD+tiyZXD11e0dY948uO++YuIxs2xtBLUTzM0AXk/STtCQpEuBk4HDJN0L\nfJAkAVwm6SxgK/DmVgO2/jU6Ck88kf/nFy+GzZuLi8fMElmqhi6vfZ7e4P9vhp87rc5LS7OFZoOi\niFKAq4HMypOlsXiyo4HfKToQG0yjo+0lgaVLnQTMypZlPYLHJD1a/Q58HS9cbw1UB4RJ+auCNm70\nmACzTslSNeQJ5iyzdpeLdDuAWec1TASSDgaWA4vTTZuAr0SEe27bftpZLtJzA5l1T92qIUn/Cbgd\neBnJ/EJbgD8GfiBplqSPdSJA62211UB5koAXijHrvkYlgnOBlRHx7dqNkpYBtwEuwA+5dgeFjY/D\n5z9fXDxmlk+jRHD45CQAEBHfkbSbZDyBDal2uoS6GsistzTqNTQi6aDJGyXNIJmJ1Et+DKkDD8yf\nBMbHnQTMek2jRHAxcLmkhdUNkhYBlwGXlBuW9aKJiXxtASMjSTtAhKuCzHpR3aqhiPiYpL8CrpM0\nmm5+HPh0RHy2I9FZz5g/H+5vOrHI/jwvkFnvazigLCI+FxELSFYnOzIiFjoJDJdqr6BWk4CUDApz\nEjDrfVkmnSMiHis7EOs9eXsFeUoIs/6SZ64hGxJ//uet7V9tCzCz/uJEYFNatgz+/d+z7790KezZ\nU148ZlaeLAvTjJIsU7kgIv5C0tHAMTUrl9mAaWWMwMiIE4BZv8tSIvgS8FvgxPT5fYCnlxhQS5Zk\nTwLz5jkJmA2CLIngqIj4JLAbIB1IplKjsq6YPz/7zKHj4+4RZDYosiSCJ9NZSANA0lEkJQQbEMuW\ntdZFdOlSDwwzGyRZuo9+ELgSOEJSBfhD4G1lBmWd0+o6wrNmebEYs0GTZWGab0u6ETiBpEpodUQ8\nVHpkVrpW1w84+GDPE2Q2iOomAkkvmbTpgfT7AkkLIuLG8sKyss2e3XoS2OVpBs0GUqMSwf9s8FoA\nryw4FuuQ2bNh587s+3u+ILPB1mjSuVd0MhArX54pI7yGsNnga9prSNIMSX8t6auSLpf0rnRNAusj\neZLA+LiTgNkwyNJr6GLgMaA66+ifkaxH8KaygrJitZoEvISk2XDJkgiOjYjFNc+/JynjsCPrtlaT\ngCeNMxs+WQaU3SjphOoTSX8AbCovJCvKxETrJQEzGz5ZSgTHAz+UtC19vgD4uaRbgYiIF5YWneXW\n6uLyrg4yG15ZEsEppUdhhVqyJPucQbNmeZCY2bBrWjUUEVuBR4FDgTnVr4jYmr5mPaK6rKSTgJm1\nIst6BB8lmVvoLtKJ5/CAsp7TaqOw5CRgZoksVUNvJpmK+smyg7H8zjyztf0vuaScOMys/2TpNXQb\nMKvsQCyf6hTSWReImTYNNm6E5cvLjcvM+keWEsHHgZsk3UbNOgQR8drSorJM5s/PvoYAJOsIeApp\nM5ssSyK4CDgHuBXYW244ltWyZa0lAXcPNbN6siSCXRFxbumRWGYTE62tK+yZQ82skSyJ4DpJHwe+\nxjOrhrweQRdUKnDeedn2dRIwsyyyJIIXp99PqNnWVvdRSauBvyBZ8eyLEfH3eY81TCYmsieBWbOc\nBMwsmyxLVRa6LoGkY0mSwEuBJ4ErJV0REXcWeZ5B00oScKOwmbUiS4kASa8ClgBPr0MQER/Jec7f\nA66PiF3psa8B3gB8MufxBlqlAu94Bzz+eLb9PXuombUqy8I064C3AO8kqcp5E7CwjXPeBrxM0hxJ\no8CpwBFtHG9gVSpwxhnZk4BnDzWzPLIMKDspIs4Afh0RHwZOBP5j3hNGxB0k3VGvAq4Ebgb2Gw4l\naaWkTZI2bd++Pe/p+tqaNbA3Y4fdpUvdPdTM8smSCJ5Iv++SNA/YDRzezkkj4oKIOD4iXg78GvjF\nFPusj4ixiBibO3duO6frW1szTunnNgEza0eWNoIrJM0CPgXcSNJj6IvtnFTS70TEg5IWkLQPnNDs\nZ4bNsmXZ9nMSMLN2Zek19NH04eWSrgBmRMQjbZ73cklzSEoXfxkRO9s83kDJuqiMk4CZFaFuIpD0\n+8A9EfGr9PkZwBuBrZI+FBEP5z1pRLws788Ouqyjhj1lhJkVpVEbwRdI+vkj6eXAJ4CLgUeA9eWH\nNnyyjhpeuNBJwMyK06hqaFrNp/63AOsj4nKSap2byw9t+KxenW2/tWvLjcPMhkujEsE0SdVEsRT4\nbs1rmQaiWXaVCuzY0Xy/8XGvJWBmxWp0Q78UuEbSQyRdSK8DkPR8kuohK0h14FgjM2bA+ec7CZhZ\n8eomgohYK+lqkjEDV0U8PXnBCMkoYyvI6tWNB44dcgj85jedi8fMhkvDKp6I+PEU2/Yb/GX5ZakS\n+sIXOhOLmQ2nLCOLrSSVCrz1rY33kVwdZGblciLokkoFzjyz+Wyhq1Z1Jh4zG15OBF2yahXs2W+q\nvWfyoDEz6wQngg6qVGDmzKS6p1nj75w5TgJm1hkeD9Ah1S6iWaeV/sxnyo3HzKzKJYIOadZFtJYH\njZlZJzkRlKxaHZRl1DC4XcDMOs+JoEQTE3D66a0tNekkYGad5kRQkkoF1q3Lvr+TgJl1ixuLS1Bt\nGG42RgCSaqN169wmYGbd40RQsImJbGsKSHDJJU4AZtZ9rhoqUCvVQatWOQmYWW9wiaAgWaeMcFWQ\nmfUaJ4ICVCqwcmXzKSPmzIGHHupMTGZmWblqqABr1sCuXY33OfBAjxY2s97kRFCAbdsavz5zJlx4\noauDzKw3OREUYMGCqbdPmwYbN8JjjzkJmFnvciJoQ6UCixbB1q37vzY6Chdd5ARgZr3PjcU5VRuI\np2obkJIeRE4CZtYPXCLIqVEDcQR885udjcfMLC8ngpymqg6q1awB2cysVzgRtKhSgcMOa75fvQZk\nM7Ne4zaCFjRqF6g1Ogpr13YmJjOzdrlE0IIsA8cWLoT1691QbGb9wyWCFjSr91+4ELZs6UgoZmaF\ncYmgBY3q/V0dZGb9yomgBWvXJjf8yebMcXWQmfUvJ4I6qqOGJZg+fd8gsV27kqkjIKkK2rgxmVHU\nScDM+pXbCKYwuXdQdXrp2u/VqiAnADPrdy4RTCFL76Bdu5L9zMz6nRNBjUaTyE3Fo4fNbBC4aiiV\ndbBYLY8eNrNB0JUSgaR3S9os6TZJl0qa0Y04YF8p4PTTW0sC7i5qZoOi44lA0nzgbGAsIo4FpgF/\n2qnzV2/8IyPJnEErVjSvCqr2EqrtLeTuomY2KLpVNTQdOFjSbmAUuL8TJ51c/bNjR/Of8WhhMxt0\nHS8RRMR9wKeBbcADwCMRcVUnzp2lN1AtV/+Y2TDoRtXQbOB1wJHAPOAQSadPsd9KSZskbdq+fXsh\n526ll4+rf8xsWHSjsXgZcHdEbI+I3cBXgZMm7xQR6yNiLCLG5s6dW8iJs/TyGR1NRgtv2eIkYGbD\noRuJYBtwgqRRSQKWAnd04sRTzRV0wAHJXEGSSwFmNpw63lgcEddL+gpwI/AUcBOwvhPnrt7g16xJ\nqokWLPA0EWZmiohux9DU2NhYbNq0qdthmJn1FUk3RMRYs/08xYSZ2ZAb2ERQO3Bs0aLkuZmZ7W8g\n5xqaPHBs69bkObg9wMxssoEsEUw1cMzTRpuZTW0gE0G9gWOeNtrMbH8DmQjqDRzztNFmZvsbyEQw\n1cAxzxtkZja1gUwEy5cnI4QXLvSIYTOzZgay1xAkN33f+M3MmuvLEoHHCJiZFafvSgQeI2BmVqy+\nKxF4jICZWbH6LhF4jICZWbH6LhF4jICZWbH6LhF4jICZWbH6LhF4jICZWbH6rtcQeIyAmVmR+q5E\nYGZmxXIiMDMbck4EZmZDzonAzGzIORGYmQ05RUS3Y2hK0nZga/r0MOChLoZTlEG4jkG4BvB19Bpf\nR3EWRsTcZjv1RSKoJWlTRIx1O452DcJ1DMI1gK+j1/g6Os9VQ2ZmQ86JwMxsyPVjIljf7QAKMgjX\nMQjXAL6OXuPr6LC+ayMwM7Ni9WOJwMzMCtQTiUDShZIelHRbndcl6VxJd0q6RdJLJr0+TdJNkq7o\nTMRTa+c6JM2S9BVJP5N0h6QTOxf5fnG2cx3vlrRZ0m2SLpU0o3OR7xdns+t4gaQfSfqtpPdMeu0U\nST9Pr/H9nYl4anmvQ9IRkr4n6fb0b7K6c1FPGWfuv0f6er+8zxv9X/XM+7xWTyQCYANwSoPX/wQ4\nOv1aCZw36fXVwB2lRNaaDeS/js8AV0bEC4AX0d3r2UCO65A0HzgbGIuIY4FpwJ+WGmljG2h8HQ+T\nxPvp2o2SpgH/QHKdi4HTJC0uKcYsNpDjOoCngL+JiMXACcBf9ul1VPXL+7zRdfTS+/xpPZEIIuJa\nkl9ePa8DLo7Ej4FZkg4HkPQ84FXA+eVH2lje65B0KPBy4IL0OE9GxM7yI55aO38PkqnND5Y0HRgF\n7i832vqaXUdEPBgRPwF2T3rppcCdEfHLiHgS+N8k19wVea8jIh6IiBvTx4+R3HTmlxlrI238Pfrq\nfV7vOnrtfV6rJxJBBvOBe2qe38u+f+i/B94L7O10UDnUu44jge3Al9Ki7/mSDulGgBlNeR0RcR/J\np6BtwAPAIxFxVRfia1ej/7e+JGkR8GLg+u5Gkls/vc/r6dn3eb8kgilJejXwYETc0O1Y2jQdeAlw\nXkS8GHgc6Gq9dB6SZpN8cj4SmAccIun07kZlkmYClwPviohHux1Pq/w+L1+/JIL7gCNqnj8v3faH\nwGslbSEpvr9S0sbOh5dZveu4F7g3Iqqf1r5C8g/Tq+pdxzLg7ojYHhG7ga8CJ3UhvnbVu76+I+kA\nkiRQiYivdjuenPrtfV5Pz77P+yURfA04I+2tcgJJlcMDEfE/IuJ5EbGIpFHyuxHRy59A613Hr4B7\nJB2T7rcUuL1rUTY35XWQVAmdIGlUkkiuoycaw1r0E+BoSUdKOpDkf+trXY6pZenf4ALgjoj4u27H\nk1cfvs+n1NPv84jo+hdwKUmd8m6SrHkWsApYlb4ukl4cdwG3kvRKmXyMk4Er+vU6gOOATcAtwL8A\ns/v0Oj4M/Ay4DbgEOKiHr+M/pNsfBXamj5+dvnYq8Iv0Gtf0+P/VlNcB/Gcg0v+pm9OvU/vtOiYd\nox/e543+r3rmfV775ZHFZmZDrl+qhszMrCROBGZmQ86JwMxsyDkRmJkNOScCM7Mh50RgHSNpjqSb\n069fSbovfbxTUkf7U0s6TtKpNc9fm3eWUUlbJB02xfZDJV2czmB6l6RKOvq6UI2uRdKHpprJ06yW\nE4F1TETsiIjjIuI4YB3wv9LHx1HCHDLpxHf1HEcyVqAa29ci4hMFh3AB8MuIeH5EHAXcSTJzZdE6\ncS02wJwIrFdMk/TFdN78qyQdDCDpKElXSrpB0nWSXpBuXyTpu0rWQ7ha0oJ0+wZJ6yRdD3xS0iHp\n/PH/L53o63XpaOGPAG9JSyRvkfQ2SZ9Lj/FcSf8s6afp10np9n9J49gsaWWji5H0fOB44KM1mz8C\nvEjSMZJOVs28+pI+J+lt6eMPSPqJkjUd1qcjhJH0fUnnpNfyC0kva3Ytk2Kq97t8U3qun0q6tvU/\nnfU7JwLrFUcD/xARS0hGY74x3b4eeGdEHA+8B/h8uv2zwEUR8UKgApxbc6znASdFxF8Da0imJHgp\n8ArgU8ABwAeAL6cllC9PiuVc4JqIeBHJXDCb0+0r0jjGgLMlzWlwPYuBmyNiT3VD+vgm4Pea/C4+\nFxG/H8maDgcDr655bXp6Le8CPhjJNNmNrqVWvd/lB4A/Tq/3tU1iswHUqOhs1kl3R8TN6eMbgEXp\nrJknAf+UfigGOCj9fiLwhvTxJcAna471TzU34D8imbCsWk8+A1jQJJZXAmfA0zfvR9LtZ0t6ffr4\nCJLktSPb5bXkFZLeS7Kew3NIEtHX09eqE8fdACzKesAmv8sfABskXVZzfBsiTgTWK35b83gPySfh\nEWBn2o7QisdrHgt4Y0T8vHYHSX/QygElnUwyu+qJEbFL0vdJkko9twPHSRqJiL3pMUZIVqW6kSQZ\n1ZbIZ6T7zCD5pD4WEfdI+tCk81R/T3to7f1b93cZEavS38ergBskHR8RZSQ461GuGrKeFcnc+XdL\nehM8vVbyi9KXf8i+ZTCXA9fVOcy3gHfW1LO/ON3+GPCsOj9zNTCe7j9NycpShwK/TpPAC0iWfmwU\n+50k1UB/W7P5b4GrI2IbsBVYLOkgSbNIZqKEfTf9h9JP8f+90XkyXEs1nrq/S0lHRcT1EfEBkoVT\njmhwKBtATgTW65YDZ0n6KUkVSXXJyHcCb5d0C/BWkvVsp/JRkjaBWyRtZl/j7fdIbsQ3S3rLpJ9Z\nTVI9cytJFcxi4EpguqQ7gE8AP84Q+wqS6azvkrSdJHmsAoiIe4DLSGZpvYwkaRDJ0oVfTLd/i2RK\n7GYaXUuter/LT0m6Vcli7D8EfprhnDZAPPuoWQcomYP+G8DZEfHNbsdjVsuJwMxsyLlqyMxsyDkR\nmJkNOScCM7Mh50RgZjbknAjMzIacE4GZ2ZBzIjAzG3L/HzrKu3bz55x1AAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x2aa0afbb9b0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "muestra1 = pd.read_csv('muestra1.csv')\n",
+    "sm.qqplot(muestra1['valor'], stats.exponweib, distargs=(40,15))\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
