--- a/Laboratorio 3.ipynb
+++ b/Laboratorio 3.ipynb
@@ -238,6 +238,15 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
