Agregar pregunta 3 completa

--- a/pregunta4.ipynb
+++ b/pregunta4.ipynb
@@ -89,7 +89,7 @@
     "collapsed": true
    },
    "source": [
-    "Como se puede observar, la muestra tiene una relación lineal con todas las distribuciones pues se observa que los puntos graficados forman una especie de recta. Bajo esta misma inspección, se ve que la distribución con parámetros $\\alpha = 20$, $\\beta = 10$ (grafico 6) es la que mejor se ajusta a los datos"
+    "Como se puede observar, la muestra tiene una relación lineal con todas las distribuciones pues se observa que los puntos graficados forman una especie de recta. Bajo esta misma inspección, se ve que la distribución con parámetros $\\alpha = 20$, $\\beta = 10$ (grafico 6) es la que mejor se ajusta a la muestra de datos, debido a que es donde más se acercan los pares coordenados a la recta $y = x$."
    ]
   },
   {
